--- a/config/database.yml
+++ b/config/database.yml
@@ -10,13 +10,16 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: sqlite3
-  database: db/test.sqlite3
-  pool: 5
-  timeout: 5000
+  adapter: mysql
+  database: uniboard_web_test
+  username: webdoc
+  password: webdoc
+  host: webdoc-production.chnus0k5dbng.us-east-1.rds.amazonaws.com
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
-  pool: 5
-  timeout: 5000
+  adapter: mysql
+  database: uniboard_web_production
+  username: webdoc
+  password: webdoc
+  host: webdoc-production.chnus0k5dbng.us-east-1.rds.amazonaws.com
+
