--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,5 +1,5 @@
-Redirect 307 /software/installer/ http://uniboard-software.s3.amazonaws.com/installer/
-Redirect 307 /software/library/ http://uniboard-software.s3.amazonaws.com/library/
+Redirect 307 /software/installer/ http://assets.getuniboard.com.s3.amazonaws.com/installer/
+Redirect 307 /software/library/ http://assets.getuniboard.com.s3.amazonaws.com/library/
 Redirect 307 /software/home/ http://www.google.com
 Redirect 307 /software/purchase/ http://getuniboard.com/buy?utm_source=uniboardApp&utm_medium=banner&utm_campaign=banner_remove_this&show_free_download=false
 Redirect 307 /software/free/messages/ http://getuniboard.com/freeVersionPages/message.html
